@@ -24,6 +24,7 @@
             Storage: StorageFiles don't store addr/len any more, they look up the file for each write (safer, and fast now we have a filename cache)
             Graphics: g.dump() will now work without allocating huge buffers
             nRF52: Added CTS (Current Time Service) support to ANCS/AMS code
+            nRF52: Add NRF.on('error') event to provide an easy way to check for Softdevice errors
             
      2v18 : Fix drawString with setClipRect with 90/270-degree rotation (fix #2343)
             Pico/Wifi: Enabled JIT compiler
